--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Static Template</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="frame"></div>
+    </div>
   </body>
 </html>
